--- a/views/index.html
+++ b/views/index.html
@@ -11,5 +11,11 @@
 <body>
     <h1>HOME</h1>
     <h2>On your way</h2>
+    <nav>
+        <ul>
+            <li><a href="/">Homepage</a></li>
+            <li><a href="/about">About Page</a></li>
+        </ul>
+    </nav>
 </body>
 </html>
